fix header spacing

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ li {
     font-weight: 500;
     color: #F9FAF8;
     align-items: flex-start;
-    justify-content: space-evenly;
+    justify-content: space-around;
 
 }
 
